# sst

./: .gitignore  CLAUDE.md  IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  README.md  TECHGUIDE.md  pyproject.toml
docs/: super8-detection-guide.md
src/: __init__.py  __main__.py  main.py
src/analysis/: __init__.py  aesthetic.py  audio.py  categorizer.py  detector.py  face.py  pipeline.py  technical.py
src/core/: __init__.py  config.py  exceptions.py  models.py
src/crops/: __init__.py  presets.py  smart_crop.py  super8_gate.py
src/export/: __init__.py  clip.py  lut.py  screenshot.py
src/gui/: __init__.py  main_window.py
src/utils/: __init__.py  ffmpeg.py  logging.py  state.py
tests/: __init__.py  test_config.py  test_crops.py  test_detector.py  test_models.py
